# notopia

./: .bazelignore  .editorconfig  .gitignore  .golangci.yaml  .harper-dictionary.txt  .lazy.lua  .mise.ci.toml  .nvim.lua  .nxignore  .prettierignore  .prettierrc  .prettierrc.ts  .renovaterc.json  .tool-versions  .wakatime-project  404.html  MODULE.bazel  README.md  buf.gen.yaml  buf.yaml  eslint.config.mjs  go.mod  go.sum  hashmap.json  index.html  justfile  mise.development.toml  mise.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yaml
.husky/: post-checkout  post-merge  pre-commit
api/: .redocly.lint-ignore.yaml  index.html  package.json  project.json  redocly.yaml
api/assets/: AgentScalarChatInterface.vue-M52Fwfqm.js  index-BF8SEpK-.js  index-CR1_LeMp.js  index-D7ZOGdDI.js  index-DsfWzpH1.css  index-jsfMhqQa.css  index-ss4v3GXm.css
api/note/: oapi-codegen.yaml  openapi.yaml  package.json  project.json
apps/web/: eslint.config.mjs  next.config.ts  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json
assets/: app.BTHY7z8y.js  app.CtA6LM8e.js  app.CuTNnPiB.js  app.ap3B4XQJ.js  docs_api.md.CEXYV6jZ.lean.js  docs_architecture-diagram.md.BHtgMeIs.lean.js  docs_architecture-diagram.md.zp_VpZ_D.lean.js  docs_class-diagram.md.Cf-JnDQK.lean.js  docs_class.md.BDNrV6OE.js  docs_class.md.BRV1FnSd.lean.js  docs_index.md.2KVEs6ew.js  docs_index.md.C_ZtLAou.js  docs_index.md.C_ZtLAou.lean.js  docs_index.md.Cu_LD4TY.js  index.md.B1WXTHBi.lean.js  index.md.Bxs1YMLA.js  index.md.CJ5SWvjp.lean.js  reference_index.md.CD6vDZmV.js  reference_note-openapi.md.CeBlpk5P.js  reference_note-openapi.md.DKVM0HkP.lean.js  style.-NCVirbs.css  style.CbNKIJWR.css  style.Cmm1oZYH.css  style.DwE3sdR-.css
assets/chunks/: @localSearchIndexroot.BxQ3FtGw.js  VPLocalSearchBox.BtyF9xiv.js  framework.ChN7yo5B.js  framework.L0rR_6UW.js  framework.MJ21yOYv.js  theme.CMRB1eo6.js  theme.CgA1_Hcg.js  theme.d4EdHqf7.js  theme.jRIjv_TE.js  vanilla-picker-BAEwS4Fy.Bhxhg9er.js
cmd/note/: Dockerfile  main.go  project.json  wire.go  wire_gen.go
deploy/compose/: compose.yaml
docs/: .env  .gitignore  BUILD.bazel  api.html  architecture-diagram.html  class-diagram.html  class.html  compose.yaml  eslint.config.mjs  index.html  index.md  package.json  project.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
docs/docs/: class.md  index.md
docs/godoc/: govalidator.md
docs/src/: index.md
docs/src/docs/: api.md  architecture-diagram.md  class-diagram.md  index.md
docs/src/reference/: note-openapi.md
page/: package.json  project.json
pagefind/: pagefind-entry.json  pagefind.en-gb_51319baf90959.pf_meta  pagefind.en-gb_dc33bf132cc1e.pf_meta  pagefind.en-gb_fb5bcfacb71e4.pf_meta
pagefind/fragment/: en-gb_140e494.pf_fragment  en-gb_273695d.pf_fragment  en-gb_42f6833.pf_fragment  en-gb_4e5b55b.pf_fragment  (+5 more)
proto/: project.json
reference/: index.html  note-openapi.html
scripts/: godoc-to-markdown.sh  install.sh  sync-deps.sh
(+155 files in other folders)
